# fragments

./: Cargo.toml  recipes.json
examples/: basic.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
fragments-core/: Cargo.toml
fragments-core/src/: components.rs  context.rs  events.rs  fragment.rs  frame.rs  interval.rs  lib.rs  scope.rs  time.rs
fragments-core/src/app/: mod.rs
fragments-core/src/assets/: mod.rs
fragments-core/src/effect/: executor.rs  future.rs  mod.rs  signal.rs
fragments-core/src/layout/: mod.rs  systems.rs
fragments-core/src/signal/: hold.rs  map.rs  mod.rs  mutable.rs  notify.rs  waiter.rs
fragments-core/src/time/: mod.rs
fragments-core/src/widget/: mod.rs
fragments-core/src/widget/common/: mod.rs
fragments-examples/: Cargo.toml
fragments-examples/examples/: basic.rs  glfw.rs  winit.rs
fragments-glfw/: Cargo.toml
fragments-glfw/src/: backend.rs  error.rs
fragments-wgpu/: Cargo.toml
fragments-wgpu/assets/: solid.wgsl
fragments-wgpu/examples/: basic.rs
fragments-wgpu/src/: app.rs  bind_groups.rs  components.rs  events.rs  gpu.rs  lib.rs  mesh.rs  quad_renderer.rs  renderer.rs  state.rs  systems.rs  typed_buffer.rs
fragments-wgpu/src/graphics/: mod.rs  shader.rs  typed_buffer.rs  widgets.rs
src/: app.rs  components.rs  events.rs  lib.rs  scope.rs  widget.rs
src/app/: effect.rs  mod.rs
src/effect/: executor.rs  future.rs  mod.rs  signal.rs  stream.rs
src/signal/: app_signal.rs  hold.rs  map.rs  mod.rs  mutable.rs  waiter.rs
src/widget/: mod.rs
src/widget/common/: mod.rs
wgpu/: Cargo.toml
wgpu/examples/: basic.rs
wgpu/src/: backend.rs  components.rs  error.rs  events.rs  lib.rs  state.rs
