[package]
name = "fragments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flax = "0.3"
parking_lot = "0.12"
tokio = { version = "1.22", features = ["rt", "time", "rt-multi-thread"] }
futures = "0.3"
thiserror = "1.0"
eyre = "0.6"
slotmap = "1.0"
dashmap = "5.4"
flume = "0.10"
waker-fn = "1.1"
pin-project = "1.0.12"
atomic_refcell = "0.1.8"
tracing = "0.1.37"
tracing-tree = "0.2.2"
tracing-subscriber = "0.3.16"

[dev-dependencies]
color-eyre = "0.6"
tokio = { version = "1.22", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
] }
