[package]
name = "fragments"
version = "0.1.0"
edition = "2021"

[workspace]

members = ["wgpu"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flax = { git = "https://github.com/ten3roberts/flax", version = "*" }
parking_lot = "0.12.1"
tokio = { version = "1.23.0", features = ["rt", "time", "rt-multi-thread"] }
futures = "0.3.25"
thiserror = "1.0.38"
eyre = "0.6.8"
slotmap = "1.0.6"
dashmap = "5.4.0"
flume = "0.10.14"
waker-fn = "1.1.0"
pin-project = "1.0.12"
atomic_refcell = "0.1.8"
tracing = "0.1.37"
slab = "0.4.7"
im = "15.1.0"

[dev-dependencies]
tracing-tree = "0.2.2"
tracing-subscriber = "0.3.16"
tokio-stream = "0.1.11"
color-eyre = "0.6.2"
tokio = { version = "1.23.0", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
] }
