[package]
name = "fragments-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flax.workspace = true
parking_lot = "0.12.1"
tokio = { version = "1.28.2", features = ["rt", "time", "rt-multi-thread"] }
futures = "0.3.28"
thiserror = "1.0.40"
eyre = "0.6.8"
slotmap = "1.0.6"
dashmap = "5.4.0"
flume = "0.10.14"
waker-fn = "1.1.0"
pin-project = "1.1.0"
atomic_refcell = "0.1.10"
tracing = "0.1.37"
slab = "0.4.8"
im = "15.1.0"
glam = "0.24"
anymap = "0.12.1"
downcast-rs = "1.2.0"
once_cell = "1.17"
itertools = "0.10"
tynm = "0.1"
atomic-waker = "1.1"
palette = "0.7"

[dev-dependencies]
tracing-tree = "0.2.3"
tracing-subscriber = "0.3.17"
tokio-stream = "0.1.14"
color-eyre = "0.6.2"
tokio = { version = "1.28.2", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
] }
