[package]
name = "fragments-examples"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
flax.workspace = true
fragments-core = { path = "../fragments-core" }
fragments-glfw = { path = "../fragments-glfw" }
fragments-wgpu = { path = "../fragments-wgpu//" }

parking_lot = "0.12"

thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
glfw = "0.48.0"
flume = "0.10.14"
slotmap = "1.0.6"

tracing-tree = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio-stream = "0.1"
color-eyre = "0.6"
tokio = { version = "1.22", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
] }
