[package]
name = "fragments-wgpu"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { workspace = true, features = ["bytemuck"] }
flax.workspace = true
anyhow.workspace = true
tracing.workspace = true
fragments-core = { path = "../fragments-core" }

parking_lot = "0.12"
wgpu = "0.15"
winit = { version = "0.28", default_features = true }
raw-window-handle = "0.5"
bytemuck = { version = "1.13", features = ["derive"] }
closure = "0.3"
palette = "0.7"
once_cell = "1"

thiserror = "1.0"
futures = "0.3"
flume = "0.10.14"
slotmap = "1.0.6"

[dev-dependencies]
tracing-tree = "0.2.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio-stream = "0.1"
tokio = { version = "1.28", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
] }
