[package]
name = "fragments-wgpu"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flax = { git = "https://github.com/ten3roberts/flax", version = "*" }
fragments = { path = "../" }

parking_lot = "0.12"
wgpu = "0.14"
winit = "0.27"

thiserror = "1.0"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tracing-tree = "0.2.2"
tracing-subscriber = "0.3.16"
tokio-stream = "0.1"
color-eyre = "0.6"
tokio = { version = "1.22", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
] }
