[package]
name = "basic"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true

fragments-wgpu = { path = "../../fragments-wgpu" }
fragments-core = { path = "../../fragments-core" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
tracing = "0.1"
glam = "0.24"
tokio = { version = "1.28", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "parking_lot",
    "time",
] }
tokio-stream = "0.1"
tokio-utils = "0.1.2"
futures = "0.3"
closure = "0.3"
palette = "0.7"
